# snail

./: CMakeLists.txt  README.md  snail.cpp  snail.h  test.cpp
headers/: ConvolutionalLayer.h  DataArray.h  FileTools.h  FullConnectedLayer.h  Layer.h  MaxPoolLayer.h  NeuralNetwork.h  functions.h  snail.h
sources/: ConvolutionalLayer.cpp  DataArray.cpp  FileTools.cpp  FullConnectedLayer.cpp  MaxPoolLayer.cpp  NeuralNetwork.cpp  functions.cpp  test.cpp
