# project(snail)
cmake_minimum_required(VERSION 2.6)
# set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../)
include_directories(headers)
file(GLOB CPPS "sources/*.cpp")
MESSAGE(${CPPS})
add_definitions(-std=c++11 -Wall -O2)
add_executable(main ${CPPS})
# target_link_libraries(${PROJECT_NAME})
# install(TARGETS ${PROJECT_NAME} DESTINATION bin)
